# orka-backup

./: .gitmodules  mssql_backup_api
.github/: copilot-instructions.md
mssql-backup-api/: mssql_backup_api
mssql-backup-api/app/Filament/Pages/: BackupDashboard.php
mssql-backup-api/app/Filament/Resources/: BackupResource.php  GroupResource.php  ServerResource.php  UserResource.php
mssql-backup-api/app/Filament/Resources/BackupResource/Pages/: ListBackups.php  ManageBackups.php
mssql-backup-api/app/Filament/Resources/UserResource/RelationManagers/: TokensRelationManager.php
mssql-backup-api/app/Filament/Widgets/: BackupChart.php  LatestBackups.php  StorageStats.php
mssql-backup-api/app/Http/Controllers/: BackupController.php  BackupUploadController.php
mssql-backup-api/app/Http/Requests/: BackupUploadRequest.php
mssql-backup-api/app/Models/: Backup.php  Group.php  Server.php  User.php
mssql-backup-api/database/migrations/: 2025_11_26_085628_create_backups_table.php  2025_11_26_130939_add_user_id_to_backups_table.php  2025_11_26_131209_add_server_to_users_table.php  2025_11_26_161426_create_servers_table.php  2025_11_26_163225_remove_server_from_users_table.php  2025_11_27_010741_add_foreign_key_to_backups_table.php  2025_12_02_142256_add_download_token_to_backups_table.php
mssql-backup-api/resources/views/backups/: index.blade.php
mssql-backup-api/resources/views/filament/pages/: backup-dashboard.blade.php
mssql-backup-api/routes/: api.php  web.php
mssql_backup_rust_service/: Cargo.toml  app-icon.rc  app.rc  build.rs  config.toml  src.rs  tray-example.rc
mssql_backup_rust_service/src/: app.rs  backup.rs  cleanup.rs  config.rs  logging.rs  main.rs  styling.rs  ui.rs  upload.rs
