[package]
name = "mssql_backup_rust_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tiberius = { version = "0.12", features = ["chrono"] }
reqwest = { version = "0.11", features = ["multipart", "json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
sha2 = "0.10"
anyhow = "1.0"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"

# For windows service
# You will need to add platform-specific dependencies if you want to run this as a true Windows service.
# For simplicity, this example will run as a console application.
