[package]
name = "mssql_backup_rust_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["multipart", "json", "stream"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"
anyhow = "1.0"
hostname = "0.3"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec", "compat"] }
bytes = "1"
serde_json = "1.0"
makepad-widgets = { path = "../makepad/widgets/", version = "1.0.0" }
ctor = "0.2.9"
time = { version = "0.3", features = ["serde", "macros", "local-offset"] }
once_cell = "1.19.0"

[target.'cfg(unix)'.dependencies]
tiberius = { version = "0.12", default-features = false, features = ["tds73", "sql-browser-tokio", "integrated-auth-gssapi", "time"] }

[target.'cfg(windows)'.dependencies]
tiberius = { version = "0.12", default-features = false, features = ["tds73", "sql-browser-tokio", "winauth", "time"] }
winapi = { version = "0.3", features = ["winuser"] }
tray-item = "0.9.0"
